# nanojellprint

./: .env.example  .gitignore  Nanoparticle_3D_Model_Spec.md  README.md  main.py  make_3mf.py  model_gen.py  printer.py  pyproject.toml
